cmake_minimum_required(VERSION 3.14)
project(TP8-Info)

set(CMAKE_CXX_STANDARD 14)

add_executable(TP8-Info main.cpp Polymorphe.cpp Polymorphe.h Robot.cpp Robot.h RobotCarburant.cpp RobotCarburant.h RobotEscargot.cpp RobotEscargot.h RobotRapide.cpp RobotRapide.h RobotTeleporteur.cpp RobotTeleporteur.h RobotTraceur.cpp RobotTraceur.h)